<resources>
    <string name="app_name">My Application</string>
    <string name="textview">TextView</string>
    <string name="add_users">Add Users</string>
    <string name="ip">enter ip users</string>
    <string name="list_users">list users</string>
    <string name="email">Email:</string>
    <string name="api_version">5.154</string>
    <string name="token_api_vk">
        vk1.a.zsbhuA5HSWL3D7bnVXrDmAohdGYMFtvjnQDCBLUMkbPyr4aqQV_HP5q_qkFsrNymXNRSb27O_tOTxj3llbV8ZDD8pEvcapvHxVM6nGB72_I6w72_FQsvWtPMH2btVKYei3MSqPgeoY0TYoicti7yp-rjE19d9uJGLxG9ECqlxABcmG1K3cB_uTSziF9MxgXK6McO503bLmH51uZS_AYYvA
    </string>
    <string name="id">id:</string>
    <string name="name">Name:</string>
    <string name="delete_user">delete user</string>
    <string name="show_users">show users</string>
    <string name="find_user">find user</string>
</resources>