<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/et_command"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip"
        android:inputType="textMultiLine"
        android:padding="20dp"
        android:textColorHint="#8D6E63"
        android:textSize="30sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/b_add_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0.5dp"
        android:gravity="center"
        android:text="@string/add_users" />


    <Button
        android:id="@+id/b_delete_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0.5dp"
        android:gravity="center"
        android:text="@string/delete_user"/>

    <Button
        android:id="@+id/b_show_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0.5dp"
        android:gravity="center"
        android:text="@string/show_users" />

    <TextView
        android:id="@+id/tv_list_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/list_users" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>